--- a/contracts_for_concurrency.tex
+++ b/contracts_for_concurrency.tex
@@ -184,6 +184,8 @@
 \newlist{checklist}{itemize}{1}
 \setlist[checklist]{label=$\square$}
 
+\newcommand{\leftbracket}{[}
+
 \begin{document}
   % Vysazeni titulnich stran / Typesetting of the title pages
   % ----------------------------------------------
