--- a/contracts_for_concurrency-20-bibliography.bib
+++ b/contracts_for_concurrency-20-bibliography.bib
@@ -74,6 +74,26 @@
     cited = {2021-01-09},
 }
 
+@book{jmmspec,
+    author = {Gosling, James and Joy, Bill and Steele, Guy L. and Bracha, Gilad and Buckley, Alex},
+    title = {The Java Language Specification, Java SE 8 Edition},
+    year = {2014},
+    isbn = {013390069X},
+    publisher = {Addison-Wesley Professional},
+    edition = {1},
+    pages = {645-659},
+    abstract = {Written by the inventors of the technology, The Java Language Specification, Java SE 8 Edition is the definitive technical reference for the Java programming language. The book provides complete, accurate, and detailed coverage of the Java programming language. It fully describes the new features added in Java SE 8, including lambda expressions, method references, default methods, type annotations, and repeating annotations. The book also includes many explanatory notes and carefully distinguishes the formal rules of the language from the practical behavior of compilers.}
+}
+
+@book{fundamentals,
+    author = {Ghezzi, C and Jazayeri, M and Mandrioli, D},
+    title = {Fundamentals of Sofware Engineering},
+    year = {2003},
+    isbn = {0-13-099183-X},
+    publisher = {Pearson Education, International},
+    edition = {2},
+    pages = {269-336},
+}
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
