--- a/contracts_for_concurrency.tex
+++ b/contracts_for_concurrency.tex
@@ -177,6 +177,14 @@
 \clubpenalty=10000
 \widowpenalty=10000
 
+% custom settings
+\lstset{
+    keepspaces=true,
+    columns=flexible,
+    frame=leftline,
+    framesep=11pt,
+}
+
 % checklist
 \newlist{checklist}{itemize}{1}
 \setlist[checklist]{label=$\square$}
